[package]
name = "teloxide_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
mime = "0.3.17"
chrono = "0.4.38"
teloxide = "0.12.2"
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc_macros = { path = "./proc_macros" }
