[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5.1"
reqwest = "0.11.16"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dataset = { path = "../dataset" }
telegram_test_server = { path = "../telegram_test_server" }
