[package]
name = "dataset"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.16"
mime = "0.3.17"
chrono = "0.4.38"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc_macros = { path = "../proc_macros" }

[lib]
name = "dataset"
