[package]
name = "telegram_test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
mime = "0.3.17"
mime_guess = "2.0.5"
chrono = "0.4.38"
rand = "0.8.5"
actix-multipart = "0.7.2"
lazy_static = "1.5.0"
futures-util = "0.3"
actix-web = "4.8"
reqwest = "0.11.16"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dataset = { path = "../dataset" }
proc_macros = { path = "../proc_macros" }
env_logger = "0.11.3"
log = "0.4.22"

[dev-dependencies]
serial_test = { version = "3.1.1" }

[lib]
name = "telegram_test_server"
