[package]
name = "teloxide_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
gag = "1.0.0"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5.1"
reqwest = "0.11.16"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# teloxide_tests_dataset = { path = "../teloxide_tests_dataset" }
# teloxide_tests_server = { path = "../teloxide_tests_server" }
teloxide_tests_macros = { path = "../teloxide_tests_macros" }
mime = "0.3.17"
chrono = "0.4.38"
actix-web-lab = "0.20.2"
parking_lot = "0.12.3"
mime_guess = "2.0.5"
rand = "0.8.5"
actix-multipart = "0.7.2"
lazy_static = "1.5.0"
futures-util = "0.3"
actix-web = "4.8"
env_logger = "0.11.3"

[dev-dependencies]
serial_test = { version = "3.1.1" }

[lib]
name = "teloxide_tests"
