[package]
name = "teloxide_tests"
version = "0.2.0"
edition = "2021"
description = "Test suite for teloxide bots"

license = "MIT"
readme = "../README.md"
documentation = "https://docs.rs/teloxide_tests/"
repository = "https://github.com/LasterAlex/teloxide_tests"

keywords = ["teloxide", "telegram", "unit_test", "test", "testing"]
categories = ["development-tools::testing"]

[dependencies]
ctrlc = "3.4.4"
gag = "1.0.0"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5.1"
reqwest = "0.12.5"
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "24a8d5f", features = ["macros", "sqlite-storage-nativetls"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide_tests_macros = "0.2.0"
mime = "0.3.17"
chrono = "0.4.38"
actix-web-lab = "0.23.0"
mime_guess = "2.0.5"
rand = "0.8.5"
actix-multipart = "0.7.2"
lazy_static = "1.5.0"
futures-util = "0.3"
actix-web = "4.9"
env_logger = "0.11.5"
tokio-util = "0.7.12"

[dev-dependencies]
serial_test = { version = "3.1.1" }

[lib]
name = "teloxide_tests"
