[package]
name = "deep_linking_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
teloxide_tests = { path = "../../teloxide_tests" }
