[package]
name = "file_download_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "24a8d5f", features = ["macros"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"

[dev-dependencies]
teloxide_tests = { path = "../../teloxide_tests" }
