[package]
name = "phrase_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros", "redis-storage", "cbor-serializer"] }
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
diesel = { version = "2.1.6", features = ["postgres"] }

[dev-dependencies]
teloxide_tests = "0.2.0"
